Updata yaml file v2

--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -57,8 +57,8 @@ jobs:
           python -m venv env
           source env/bin/activate
           pip install -r requirements.txt
-          export AWS_SECRET_ID
-          export AWS_ACCES_ID
+          export AWS_SECRET_ID=$(AWS_SECRET_ID)
+          export AWS_ACCES_ID=$(AWS_ACCES_ID)
           dvc pull models/model.pkl -r aws-bucket-model
           dvc unprotect models/model.pkl.dvc
           dvc repro -f
