--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -53,8 +53,8 @@ jobs:
           pip install pycryptodome
           python utils/setter.py
           pip install -r requirements.txt
-          export AWS_SECRET_ID=$(cat aws_access_key_id.txt)
-          export AWS_ACCES_ID=$(cat aws_secret_key_id.txt)
+          export AWS_SECRET_ID=$(cat aws_secret_key_id.txt)
+          export AWS_ACCES_ID=$(cat aws_access_key_id.txt)
           dvc pull models/model.pkl -r aws-bucket-model
           dvc unprotect models/model.pkl.dvc
           dvc repro -f
