--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -47,3 +47,24 @@ jobs:
           dvc add model/model.pkl -r models_track --to-remote
           dvc push model/model.pkl -r models_track 
 
+              - name: Commit .dvc file changes
+        run: |
+          git config --local user.email "thegameprox777.13@gmail.com"
+          git config --local user.name "github-actions[bot]"
+          git add model/model.pkl.dvc
+          git commit -m " Updating model serialization"
+      - uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+          force: true
+        env:
+          DEBUG: true
+      - uses: iterative/setup-cml@v1
+      - name: Push metrics
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cat report.txt >> report.md
+          cml comment create report.md
+
