--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -1,4 +1,4 @@
-name: continuos training
+name: Mlops
 permissions:  
   id-token: write 
   contents: write
@@ -8,7 +8,7 @@ permissions:
 on:
   push:
     branches:
-      - workflows_continuos_training
+      - main
   schedule:
     - cron: '0 */6 * * *'
   workflow_dispatch:
