--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -35,6 +35,7 @@ jobs:
         run: |
           python -m venv env
           source env/bin/activate
+          pip install pycryptodome 
           pip install -r requirements.txt
           export AWS_ACCESS_KEY_ID=$(python utils/setter.py)
           export AWS_SECRET_ACCESS_KEY=$(python utils/setter.py)
