--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -33,6 +33,7 @@ jobs:
           IV_ACCES_ID: ${{ secrets.IV_ACCES_ID }}
           IV_SECRET: ${{ secrets.IV_SECRET }}
         run: |
+          pip install --upgrade pip
           python -m venv env
           source env/bin/activate
           pip install pycryptodome 
