--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -1,10 +1,11 @@
-name: Mlops
+name: Training
 permissions:  
   id-token: write 
   contents: write
   pull-requests: write 
   issues: read
   packages: none
+
 on:
   push:
     branches:
@@ -17,30 +18,78 @@ on:
         description: Why to run this?
         required: false
         default: running CT
+
 jobs:
-  continuos-training:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-    
-      - name: Decrypt Credentials
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Decrypt secrets acces id and secret
         env:
-          CIPHERTEXT_ACCES_ID: ${{ secrets.CIPHERTEXT_ACCES_ID }}
-          CIPHERTEXT_SECRET: ${{ secrets.CIPHERTEXT_SECRET }}
-          ENCRYPTION_KEY_ACCES_ID: ${{ secrets.ENCRYPTION_KEY_ACCES_ID }}
-          ENCRYPTION_KEY_HEX_SECRET: ${{ secrets.ENCRYPTION_KEY_HEX_SECRET }}
+          ENCRYPTION_KEY_HEX_ACCES_ID: ${{ secrets.ENCRYPTION_KEY_HEX_ACCES_ID }}
           IV_ACCES_ID: ${{ secrets.IV_ACCES_ID }}
+          CIPHERTEXT_ACCES_ID: ${{ secrets.CIPHERTEXT_ACCES_ID }}
+          ENCRYPTION_KEY_HEX_SECRET: ${{ secrets.ENCRYPTION_KEY_HEX_SECRET }}
           IV_SECRET: ${{ secrets.IV_SECRET }}
+          CIPHERTEXT_SECRET: ${{ secrets.CIPHERTEXT_SECRET }}
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           python -m venv env
           source env/bin/activate
-          pip install pycryptodome 
+          pip install pycryptodome
+          python utils/setter.py
+
+      - name: Train model
+        env:
+          AWS_SECRET_ID: $(cat aws_secret_key_id.txt)
+          AWS_ACCES_ID: $(cat aws_access_key_id.txt)
+        run: |
+          python -m pip install --upgrade pip
+          python -m venv env
+          source env/bin/activate
           pip install -r requirements.txt
-          export AWS_ACCESS_KEY_ID=$(python utils/setter.py)
-          export AWS_SECRET_ACCESS_KEY=$(python utils/setter.py)
-          dvc pull data/Dry_Bean.csv
-          mv data/Dry_Bean.csv ./data/
+          export AWS_SECRET_ID=$AWS_SECRET_ID
+          export AWS_ACCES_ID=$AWS_ACCES_ID
+          dvc pull models/model.pkl -r aws-bucket-model
+          dvc unprotect models/model.pkl.dvc
           dvc repro -f
-          echo '
+          echo 'Training Completed'
+          dvc add models/model.pkl --to-remote -r models_track 
+          dvc push models/model.pkl -r models_track
+
+      - name: Clean up
+        run: |
+          rm -f aws_access_key_id.txt
+          rm -f decrypted_acces_id.txt
+
+      - name: Commit .dvc file changes
+        run: |
+          git config --local user.email "thegameprox777.13@gmail.com"
+          git config --local user.name "github-actions[bot]"
+          git add models/model.pkl.dvc
+          git commit -m "Updating model serialization"
+
+      - uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+          force: true
+        env:
+          DEBUG: true
+
+      - uses: iterative/setup-cml@v1
+
+      - name: Push metrics
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cat report.txt >> report.md
+          cml comment create report.md
