--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -48,17 +48,13 @@ jobs:
           python utils/setter.py
 
       - name: Train model
-        env:
-          AWS_SECRET_ID: $(cat aws_secret_key_id.txt)
-          AWS_ACCES_ID: $(cat aws_access_key_id.txt)
         run: |
-          ls
           python -m pip install --upgrade pip
           python -m venv env
           source env/bin/activate
           pip install -r requirements.txt
-          export AWS_SECRET_ID=$AWS_SECRET_ID
-          export AWS_ACCES_ID=$AWS_ACCES_ID
+          export AWS_SECRET_ACCESS_KEY=$(cat aws_secret_key_id.txt)
+          export AWS_ACCES_KEY_ID=$(cat aws_access_key_id.txt)
           dvc pull models/model.pkl -r aws-bucket-model
           dvc unprotect models/model.pkl.dvc
           dvc repro -f
