--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -47,29 +47,20 @@ jobs:
           pip install pycryptodome
           python utils/setter.py
 
-      - name: Install AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install
-
-      - name: Configure AWS credentials
-        run: |
-          aws configure set aws_access_key_id $(cat aws_access_key_id.txt)
-          aws configure set aws_secret_access_key $(cat aws_secret_key_id.txt)
-          aws configure set default.region
-
       - name: Train model
         run: |
           python -m pip install --upgrade pip
           python -m venv env
-          echo "Activando ambiente ..."
           source env/bin/activate
           pip install -r requirements.txt
           echo "Asignando las variables"
           export AWS_SECRET_ACCESS_KEY=$(cat aws_secret_key_id.txt)
           export AWS_ACCESS_KEY_ID=$(cat aws_access_key_id.txt)
-          echo "trayendo el modelo"
+          echo $AWS_ACCESS_KEY_ID
+          echo $AWS_SECRET_ACCESS_KEY
+          echo "Trayendo el modelo"
+          dvc pull models/model.pkl -r aws-bucket-model
+          dvc unprotect models/model.pkl.dvc
           dvc repro -f
           echo 'Training Completed'
           dvc add models/model.pkl --to-remote -r models_track 
@@ -78,7 +69,7 @@ jobs:
       - name: Clean up
         run: |
           rm -f aws_access_key_id.txt
-          rm -f decrypted_access_id.txt
+          rm -f decrypted_acces_id.txt
 
       - name: Commit .dvc file changes
         run: |
