--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -61,7 +61,8 @@ jobs:
           dvc unprotect models/model.pkl.dvc
           dvc repro -f
           echo 'Training Completed'
-          dvc add models/model.pkl --to-remote -r aws-bucket-model 
+          dvc add models/model.pkl --to-remote -r aws-bucket-model
+          git add .
           dvc push 
 
       - name: Clean up
