--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -11,7 +11,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 */72 * * *'
+    - cron: '0 0 */4 * *'
   workflow_dispatch:
     inputs:
       reason:
